[tool.poetry]
name = "coinpan crawler"
description = "web page crawler getting data from the coinpan website"
authors = ["cjssoote@gmail.com"]

[tool.poetry.dependencies]
black = ">=19.3b0,<=22.12"
isort = ">=5.7"
pre-commit = ">=2.13"
pylint = ">=2.9"
python = ">=3.8"
selenium = ">=4.0"
webdriver-manager = ">=3.8"
urllib3 = "1.26.15"
chromedriver-autoinstaller = "0.4.0"
streamlit = "1.21.0"
numpy = ">=1.24"
pandas = "1.5.3"

[tool.black]
line-length = 110
target-version = ['py39']

[tool.isort]
profile="black"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = 110
skip_gitignore = "True"
