[metadata]
name = coinpan_crawler
version = 1.0.0
description = web page crawler getting data from the coinpan website
author = Sorrychoe
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    crawler
    sns
url = https://github.com/sorrychoe/coinpan_crawler
project_urls =
    Source Code = https://github.com/sorrychoe/coinpan_crawler
    Bug Tracker = https://github.com/sorrychoe/coinpan_crawler/issues

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy >=1.24
    pandas >= 1.5.3
    selenium >=4.0
    webdriver-manager >=3.8
    streamlit == 1.21.0

[options.extras_require]
dev =
    flake8>=3.9
    isort>=5.7
    pre-commit>=2.13
    build>=0.7
    setuptools>=61.0,<64.0
    wheel>=0.37

[flake8]
max-line-length = 110
max-complexity = 20
select = B,C,E,F,W,T4,B9
ignore = E203, E226, E266, E501
per-file-ignores = __init__.py:F401,F403,F405

[tool.isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 110
skip_gitignore = True
